# adsparkx-persona-support-agent

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
config/: escalation_rules.yml
data/knowledge_base/: api_authentication_troubleshooting.md  billing_invoice_policy.md  dashboard_performance_troubleshooting.md  data_export_compliance.md  mobile_app_login_issue.md  onboarding_faq.txt  outage_incident_response.md  password_reset_guide.md  scim_user_provisioning.md  sla_policy.md  sso_saml_setup_guide.md  webhook_delivery_troubleshooting.md
scripts/: demo_queries.txt  recording_checklist.md
src/support_agent/: __init__.py  chunking.py  cli.py  config.py  document_loader.py  embeddings.py  escalation.py  handoff.py  ingest.py  persona.py  response_generator.py  retriever.py  schemas.py  streamlit_app.py  vector_store.py  workflow.py
tests/: test_chunking.py  test_escalation.py  test_persona.py
