[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adsparkx-persona-support-agent"
version = "1.0.0"
description = "Persona-adaptive customer support agent using RAG, LLMs, and human escalation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sowmya Kathari" }]
dependencies = [
  "chromadb==0.5.23",
  "numpy==1.26.4",
  "openai==1.59.7",
  "pypdf==5.1.0",
  "python-docx==1.1.2",
  "python-dotenv==1.0.1",
  "PyYAML==6.0.2",
  "rich==13.9.4",
  "scikit-learn==1.5.2",
  "streamlit==1.41.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "ruff==0.8.4",
  "mypy==1.14.1"
]

[project.scripts]
psa-ingest = "support_agent.ingest:main"
psa-chat = "support_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
